--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "next-auth": "^5.0.0-beta.25",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "sass": "^1.88.0",
         "tailwind-merge": "^3.0.2",
         "tw-animate-css": "^1.2.4",
         "usehooks-ts": "^3.1.1"
