--- a/package.json
+++ b/package.json
@@ -32,18 +32,23 @@
     "devDependencies": {
         "@eslint/eslintrc": "^3",
         "@tailwindcss/postcss": "^4",
+        "@testing-library/dom": "^10.4.0",
+        "@testing-library/react": "^16.3.0",
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
+        "@vitejs/plugin-react": "^4.5.1",
         "eslint": "^9",
         "eslint-config-next": "15.2.3",
         "eslint-config-prettier": "^10.1.1",
         "eslint-plugin-react": "^7.37.4",
+        "jsdom": "^26.1.0",
         "prettier": "^3.5.3",
         "prettier-plugin-tailwindcss": "^0.6.11",
         "tailwindcss": "^4",
         "typescript": "^5",
         "typescript-eslint": "^8.26.1",
-        "vitest": "^1.6.0"
+        "vite-tsconfig-paths": "^5.1.4",
+        "vitest": "^2.1.9"
     }
 }
