--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "framer-motion": "^12.6.3",
+        "i18next": "^25.2.1",
         "next": "15.3.2",
         "next-auth": "^5.0.0-beta.25",
         "react": "^19.0.0",
@@ -27,7 +28,8 @@
         "tailwind-merge": "^3.0.2",
         "tw-animate-css": "^1.2.4",
         "usehooks-ts": "^3.1.1",
-        "zod": "^3.24.4"
+        "zod": "^3.24.4",
+        "zod-i18n-map": "^2.27.0"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
