--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@tanstack/react-query": "^5.76.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "date-fns": "^4.1.0",
         "framer-motion": "^12.6.3",
         "next": "15.3.2",
         "next-auth": "^5.0.0-beta.25",
