feat(env): ✨ Atualiza variáveis de ambiente removendo `PROFILE_API_URL` e `PLANTAS_API_URL`
* Remove variáveis obsoletas do arquivo de exemplo
* Mantém a consistência nas variáveis de ambiente

--- a/env.example
+++ b/env.example
@@ -4,7 +4,6 @@ AUTH_GOOGLE_ID=
 AUTH_GOOGLE_SECRET=
 
 AUTH_API_URL=
-PROFILE_API_URL=
-PLANTAS_API_URL=
+CATALOGO_API_URL=
 PLANTIOS_API_URL=
 AI_API_URL=
