--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
         "i18next": "^25.2.1",
         "next": "15.3.2",
         "next-auth": "^5.0.0-beta.25",
+        "next-themes": "^0.4.6",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.56.4",
         "sass": "^1.88.0",
+        "sonner": "^2.0.6",
         "tailwind-merge": "^3.0.2",
         "tw-animate-css": "^1.2.4",
         "usehooks-ts": "^3.1.1",
